# prollytree

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  404.html  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GIT_INTEGRATION_EXAMPLE.md  README.md  RELEASING.md  TREE.md  build_python.sh  clippy.toml  index.html  mkdocs.yml  prolly_config_tree_config  prolly_hash_mappings  publish_python.sh  pyproject.toml  run_benchmarks.sh  rustfmt.toml  sitemap.xml  test1.prolly  test_branch.sh
.github/: deploy.md
.github/workflows/: ci.yml  docs.yml  pre-commit.yml  pypi-publish.yml.disabled  pypi.yml  python.yml  python_examples.yml  release.yml  rust_examples.yml
api/python/: index.html
api/rust/: index.html
architecture/: index.html
basic_usage/: index.html
benches/: README.md  git.rs  git_prolly.rs  git_prolly_bench.rs  prollytree_bench.rs  sql.rs  sql_bench.rs  storage.rs  tree.rs
cli/: index.html
doc/: storage.md
doc/design/: ai-agent-memory.md  git-external-storage.md
doc/guide/: git-prolly-sql.md  git-prolly.md  git-workflows.md
docs/: WORKTREE_IMPLEMENTATION.md  architecture.md  basic_usage.md  bench-canonicalize-impact.md  cli.md  dolt-streaming-chunker.md  faq.md  git.md  incremental-rebalance-roadmap.md  index.md  installation.md  quickstart.md  requirements.txt  sql.md  storage.md  text_search.md  text_search_demo.html
docs/_static/: custom.css
docs/api/: python.md  rust.md
docs/examples/: basic.md  index.md  python.md  sql.md  text_search.md  versioning.md
docs/theory/: index.md  merkle.md  mutation.md  prolly_tree.md  rolling_hash.md  versioning.md
examples/: README.md  agent.rs  agent_context.rs  agent_context_ui.rs  agent_demo.rs  git_diff.rs  git_diff_example.rs  git_integration_demo.rs  git_merge.rs  git_merge_example.rs  git_sql.rs  index.html  namespaced.rs  prollytree-ui.html  proof.rs  rocksdb_storage.rs  sql.rs  sql_example.rs  storage.rs  text_index.rs  versioning.rs  worktree.rs
examples/basic/: index.html
examples/data/: README.md  conversation_data.json  conversation_data_financial.json  conversation_data_simple.json
examples/financial_advisor/: .env.example  .gitignore  Cargo.toml  ENHANCED_README.md  README.md  test_import.rs
examples/financial_advisor/advisedb/test1/: prolly_hash_mappings
examples/financial_advisor/advisedb/test2/: prolly_config_tree_config
examples/financial_advisor/advisedb/test4/: prolly_config_tree_config
examples/financial_advisor/advisedb/test5/: prolly_hash_mappings
examples/financial_advisor/docs/: architecture.md  enhanced.md  original.md
examples/financial_advisor/examples/: demo.rs  enhanced_demo.rs
examples/financial_advisor/src/: benchmarks.rs  lib.rs  main.rs
examples/financial_advisor/src/advisor/: analysis_modules.rs  compliance.rs  enhanced_advisor.rs  interactive.rs  mod.rs  personalization.rs  recommendations.rs  rig_agent.rs  test_recommendations.rs  workflow.rs
examples/financial_advisor/src/memory/: consistency.rs  display.rs  enhanced_types.rs  mod.rs  types.rs
examples/financial_advisor/src/security/: attack_simulator.rs  mod.rs
examples/financial_advisor/src/validation/: mod.rs
examples/financial_advisor/src/visualization/: display.rs  mod.rs
examples/financial_advisor/test/: prolly_hash_mappings
examples/financial_advisor/test/test/: prolly_config_tree_config
examples/financial_advisor/test/test/test/: prolly_hash_mappings
examples/financial_advisor/test/test/test/test/test/: prolly_config_tree_config
examples/python/: index.html
examples/rig_versioned_memory/: .gitignore  Cargo.toml  README.md
examples/rig_versioned_memory/src/: lib.rs  main.rs
examples/rig_versioned_memory/src/agent/: demos.rs  mod.rs  versioned.rs
examples/rig_versioned_memory/src/memory/: mod.rs  schema.rs  store.rs  types.rs
examples/rig_versioned_memory/src/utils/: mod.rs
examples/sql/: index.html
examples/text_search/: index.html
examples/versioning/: index.html
faq/: index.html
installation/: index.html
proptest-regressions/: tree.txt
python/: .pypirc.example  README.md  build_python.sh  publish_python.sh
python/docs/: README.md  advanced.rst  api.rst  build_docs.sh  conf.py  examples.rst  index.rst  quickstart.rst  requirements.txt
python/examples/: basic_usage.py  build_and_run.sh  langgraph.py  langgraph_chronological.py  langgraph_example.py  langgraph_memory_example.py  langgraph_multi_agent_branching.py  langgraph_prolly.py  langmem_integration.py  merge_example.py  namespaced_example.py  requirements.txt  run_examples.sh  run_langgraph.sh  sql_example.py  text_index_example.py
python/prollytree/: __init__.py  (+1 more)
quickstart/: index.html
scripts/: check-license.sh  check-version-consistency.sh
search/: search_index.json
sql/: index.html
src/: config.rs  diff.rs  digest.rs  encoding.rs  errors.rs  git.rs  lib.rs  main.rs  node.rs  node2.rs  page.rs  page_range.rs  proof.rs  python.rs  rolling_hash.rs  serde_bincode.rs  sql.rs  storage.rs  storage2.rs  streaming_chunker.rs  tracing.rs  tree.rs  validation.rs  value_digest.rs  visitor.rs
storage/: index.html
test-dataset/: prolly_config_tree_config  prolly_hash_mappings
test-prolly-ui/: prolly_config_tree_config  prolly_hash_mappings
test-sql-demo/: prolly_config_tree_config  prolly_hash_mappings
test_clear/: prolly_config_tree_config  prolly_hash_mappings
tests/: README.md  blob_storage.rs  cli_commands.rs  conflict_resolvers.rs  error_recovery.rs  externalization.rs  file_storage_atomicity.rs  generic_digest_size.rs  git_versioning_lifecycle.rs  history_independence.rs  proximity_empty_bucket.rs  proximity_namespaced.rs  proximity_persistence.rs  regression_degenerate_config.rs  regression_proof_guard.rs  rolling_hash_overflow.rs  scale_and_stress.rs  setup-agentdb.sh  setup-db-repo.sh  setup-testdb.sh  sql_integration.rs  sql_integration_test.rs  storage_backends.rs  store_factory.rs  text_cascade.rs  text_index_minilm.rs  text_index_namespaced.rs  text_multichunk.rs  versioned_store_cross_backend.rs  worktree_integration.rs
text_search/: index.html
theory/: index.html
(+72 files in other folders)
