[package]
name = "prollytree"
description = "A prolly (probabilistic) tree for efficient storage, retrieval, and modification of ordered data."
authors = ["Feng Zhang <f.feng.zhang@gmail.com>"]
version = "0.2.1-beta"
edition = "2021"

license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/prollytree"
repository = "https://github.com/zhangfengcdt/prollytree.git"
keywords = ["prolly", "tree", "probabilistic", "hash"]
categories = ["data-structures", "cryptography"]

[dependencies]
base64 = { version = "0.22.0", optional = true }
sha2 = "0.10"
tracing = { version = "0.1.37", optional = true }
rand = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
thiserror = "1.0"
twox-hash = "2.0"
serde_json = "1.0.117"
arrow = "54.2.1"
schemars = "0.8"
parquet = { version = "54.0.0", features = ["arrow"] }

[dev-dependencies]
bytes = "1.10.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[features]
default = ["digest_base64", "prolly_balance_max_nodes"]
tracing = ["dep:tracing"]
digest_base64 = ["dep:base64"]
prolly_balance_max_nodes = []
prolly_balance_rolling_hash = []
