[package]
name = "prollytree"
description = "A prolly (probabilistic) tree for efficient storage, retrieval, and modification of ordered data."
authors = ["Feng Zhang <f.feng.zhang@gmail.com>"]
version = "0.2.1-beta"
edition = "2021"

license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/prollytree"
repository = "https://github.com/zhangfengcdt/prollytree.git"
keywords = ["prolly", "tree", "probabilistic", "hash"]
categories = ["data-structures", "cryptography"]

[lib]
name = "prollytree"
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = { version = "0.22.0", optional = true }
sha2 = "0.10"
tracing = { version = "0.1.37", optional = true }
rand = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
thiserror = "2.0"
twox-hash = "2.0"
serde_json = "1.0.117"
arrow = "54.2.1"
schemars = "0.8"
parquet = { version = "54.0.0", features = ["arrow"] }
gix = { version = "0.66", features = ["blocking-network-client"], optional = true }
clap = { version = "4.0", features = ["derive"], optional = true }
lru = { version = "0.16", optional = true }
hex = { version = "0.4", optional = true }
chrono = { version = "0.4", optional = true }
gluesql-core = { version = "0.15", optional = true }
async-trait = { version = "0.1", optional = true }
uuid = { version = "1.0", optional = true }
futures = { version = "0.3", optional = true }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"], optional = true }
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }
rocksdb = { version = "0.22", optional = true }

[dev-dependencies]
bytes = "1.10.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
criterion = "0.5"
tempfile = "3.0"
tokio = { version = "1.0", features = ["full"] }

[features]
default = ["digest_base64", "prolly_balance_max_nodes", "git", "sql", "rocksdb_storage"]
tracing = ["dep:tracing"]
digest_base64 = ["dep:base64"]
prolly_balance_max_nodes = []
prolly_balance_rolling_hash = []
git = ["dep:gix", "dep:clap", "dep:lru", "dep:hex", "dep:chrono"]
sql = ["dep:gluesql-core", "dep:async-trait", "dep:uuid", "dep:futures", "dep:tokio"]
python = ["dep:pyo3"]
rocksdb_storage = ["dep:rocksdb", "dep:lru"]

[[bin]]
name = "git-prolly"
path = "src/bin/git-prolly.rs"
required-features = ["git", "sql"]

[[bench]]
name = "prollytree_bench"
harness = false

[[bench]]
name = "sql_bench"
harness = false
required-features = ["sql"]

[[bench]]
name = "git_prolly_bench"
harness = false
required-features = ["git", "sql"]

[[example]]
name = "proof_visualization"
path = "examples/proof_visualization.rs"

[[example]]
name = "git_sql"
path = "examples/git_sql.rs"
required-features = ["sql"]

[[example]]
name = "git_diff"
path = "examples/git_diff.rs"
required-features = ["git"]

[[example]]
name = "git_merge"
path = "examples/git_merge.rs"
required-features = ["git"]

[[example]]
name = "rocksdb_storage"
path = "examples/rocksdb_storage.rs"
required-features = ["rocksdb_storage"]

[workspace]
members = ["examples/rig_versioned_memory", "examples/financial_advisor"]
