[package]
name = "prollytree"
description = "A prolly (probabilistic) tree for efficient storage, retrieval, and modification of ordered data."
authors = ["Feng Zhang <f.feng.zhang@gmail.com>"]
version = "0.3.2-beta"
edition = "2021"

license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/prollytree"
repository = "https://github.com/zhangfengcdt/prollytree.git"
keywords = ["prolly", "tree", "probabilistic", "hash"]
categories = ["data-structures", "cryptography"]

[lib]
name = "prollytree"
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = { version = "0.22.0", optional = true }
sha2 = "0.10"
tracing = { version = "0.1.37", optional = true }
rand = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
thiserror = "2.0"
twox-hash = "2.0"
serde_json = "1.0.117"
arrow = "54.2.1"
schemars = "0.8"
parquet = { version = "54.0.0", features = ["arrow"] }
gix = { version = "0.66", features = ["blocking-network-client"], optional = true }
clap = { version = "4.0", features = ["derive"], optional = true }
lru = { version = "0.16", optional = true }
hex = { version = "0.4", optional = true }
chrono = { version = "0.4", optional = true }
gluesql-core = { version = "0.15", optional = true }
async-trait = { version = "0.1", optional = true }
uuid = { version = "1.0", optional = true }
futures = { version = "0.3", optional = true }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync"], optional = true }
rig-core = { version = "0.2.1", optional = true }
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }
rocksdb = { version = "0.22", optional = true }
ratatui = { version = "0.26", optional = true }
crossterm = { version = "0.29", optional = true }

[dev-dependencies]
bytes = "1.10.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
criterion = "0.5"
tempfile = "3.0"
tokio = { version = "1.0", features = ["full"] }

[features]
default = ["digest_base64", "prolly_balance_max_nodes", "git", "sql"]
tracing = ["dep:tracing"]
digest_base64 = ["dep:base64"]
prolly_balance_max_nodes = []
prolly_balance_rolling_hash = []
git = ["dep:gix", "dep:clap", "dep:lru", "dep:hex", "dep:chrono", "dep:uuid"]
sql = ["dep:gluesql-core", "dep:async-trait", "dep:uuid", "dep:futures", "dep:tokio"]
rig = ["dep:rig-core", "dep:tokio", "dep:async-trait"]
python = ["dep:pyo3"]
rocksdb_storage = ["dep:rocksdb", "dep:lru"]
tui = ["dep:ratatui", "dep:crossterm", "dep:tokio"]

[[bin]]
name = "git-prolly"
path = "src/git/git-prolly.rs"
required-features = ["git", "sql"]

[[bin]]
name = "prolly-ui"
path = "src/bin/prolly-ui.rs"
required-features = ["git"]

[[bench]]
name = "tree"
harness = false

[[bench]]
name = "sql"
harness = false
required-features = ["sql"]

[[bench]]
name = "git"
harness = false
required-features = ["git", "sql"]

[[bench]]
name = "storage"
harness = false

[[example]]
name = "proof"
path = "examples/proof.rs"

[[example]]
name = "sql"
path = "examples/sql.rs"
required-features = ["sql"]

[[example]]
name = "versioning"
path = "examples/versioning.rs"

[[example]]
name = "storage"
path = "examples/storage.rs"
required-features = ["rocksdb_storage"]

[[example]]
name = "agent"
path = "examples/agent.rs"
required-features = ["git", "sql", "rig", "tui"]

[[example]]
name = "worktree"
path = "examples/worktree.rs"
required-features = ["git", "sql", "rig", "tui"]
