[package]
name = "financial_advisor"
version = "0.1.0"
edition = "2021"

[dependencies]
prollytree = { path = "../..", features = ["sql", "git"] }
rig-core = "0.15"
hex = "0.4"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
indicatif = "0.17"
tabled = "0.16"
sha2 = "0.10"
gluesql-core = "0.15"
futures = "0.3"
dotenv = "0.15"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.0"

[[bin]]
name = "financial-advisor"
path = "src/main.rs"
