[package]
name = "financial_advisor"
version = "0.1.0"
edition = "2021"

[dependencies]
prollytree = { path = "../..", features = ["sql", "git"] }
rig-core = "0.2.1"
hex = "0.4"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
indicatif = "0.17"
sha2 = "0.10"
gluesql-core = "0.15"
dotenv = "0.15"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "financial-advisor"
path = "src/main.rs"

[[example]]
name = "enhanced_demo"
path = "examples/demo.rs"
