[package]
name = "rig_versioned_memory"
version = "0.1.0"
edition = "2021"

[dependencies]
rig-core = "0.15"
prollytree = { path = "../..", features = ["sql", "git"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
gluesql-core = "0.15"
async-trait = "0.1"
clap = { version = "4.0", features = ["derive"] }
dotenv = "0.15"
colored = "3.0"

[[bin]]
name = "rig-memory-demo"
path = "src/main.rs"